# Paydar3d

./: .cproject  .gitignore  .project  CMakeLists.txt  robotoos_config.h.cmake
lib/rcssnet/: addr.cpp  exception.cpp  socket.cpp  socket.hpp  socketstreambuf.hpp  tcpsocket.cpp  udpsocket.cpp
src/: Act.cpp  Act.h  Attacker.cpp  CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.h  Decide.h  Deffender.cpp  Geom.cpp  Geom.h  Goalie.cpp  Localize.cpp  Localize.h  Logger.cpp  Logger.h  MainDecide.cpp  Math.cpp  Math.h  Middle.cpp  Parser.cpp  Parser.h  Skill.cpp  Skill.h  Svd.cpp  Svd.h  Types.h  Walk.cpp  WorldModel.cpp  WorldModel.h  bools.cpp  connection.cpp  connection.h  defines.h  gmath.h  kill.sh  line.cpp  line.h  main.cpp  matrix.cpp  matrix.h  (+7 more)
src/ACT/: diveL.txt  diveR.txt  hfl.txt  hfr.txt  standing-backup.txt  standing.txt  standing2.txt  standingBack.txt  standingK.txt  standupB.txt  standupF.txt  zero-eh.txt  zero.txt
